# haskellintro

./: README.md  flake.nix  haskellintro.cabal  scripts.nix
app/: Main.hs
src/: Core.hs
test/: Test.hs
